more intuitve ctrl methods, better css and ui, begining of admin featuring